[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/SizeMenu.gd" type="Script" id=2]

[node name="SizeMenu" type="MarginContainer"]
margin_right = 1025.0
margin_bottom = 601.0
theme = ExtResource( 1 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1005.0
margin_bottom = 581.0
custom_constants/separation = 100

[node name="Label" type="Label" parent="VBoxContainer"]
margin_left = 220.0
margin_right = 764.0
margin_bottom = 32.0
size_flags_horizontal = 4
text = "Select Board Size"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 167.0
margin_top = 132.0
margin_right = 817.0
margin_bottom = 170.0
size_flags_horizontal = 4
custom_constants/separation = 100

[node name="4x4Btn" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 38.0
rect_min_size = Vector2( 150, 0 )
text = "4x4"

[node name="6x6Btn" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 250.0
margin_right = 400.0
margin_bottom = 38.0
rect_min_size = Vector2( 150, 0 )
text = "6x6"

[node name="8x8Btn" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 500.0
margin_right = 650.0
margin_bottom = 38.0
rect_min_size = Vector2( 150, 0 )
text = "8x8"

[node name="BackBtn" type="Button" parent="VBoxContainer"]
margin_top = 523.0
margin_right = 140.0
margin_bottom = 561.0
size_flags_horizontal = 0
size_flags_vertical = 10
text = "Back"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/4x4Btn" to="." method="_on_4x4Btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/6x6Btn" to="." method="_on_6x6Btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/8x8Btn" to="." method="_on_8x8Btn_pressed"]
[connection signal="pressed" from="VBoxContainer/BackBtn" to="." method="_on_BackBtn_pressed"]
